--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <h1>HS Trejo Luna NFPD</h1>
     <h2>(No Frameworks Project Directory)</h2>
     <a href="Landing/index.html"> Go to Landing </a>
-    <a href="Boxes/index.html"> Go to Landing </a>
+    <a href="Boxes/index.html"> Go to Boxes</a>
 
 </body>
 
