--- a/html/Boxes/index.html
+++ b/html/Boxes/index.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <body>
-      <h1>HS Trejo Luna NFPD</h1>
-      <h2>(No Frameworks Project Directory)</h2>
-      <a href="Landing/index.html"> Go to Landing </a>
-      <a href="Boxes/index.html"> Go to Landing </a>
+        <div class="box red">1000</div>
+        <div class="box green">2500</div>
+        <div class="box blue">995</div>
     </body>
   </head>
 </html>
